feat: update meta data

--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta
+      name="title"
+      content="Color Tailor - Simple Tailwind Shades Creator"
+    />
+    <meta
+      name="description"
+      content="A simple web app to generate tailwind shades from a base color."
+    />
+    <meta
+      name="keywords"
+      content="tailwind, tailwindcss, color, shades, generator, tool"
+    />
+    <meta name="author" content="Aj7" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <title>Color Tailor</title>
   </head>
   <body>
