--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <meta name="author" content="Aj7" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Color Tailor</title>
   </head>
   <body>
